--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
             <artifactId>commons-configuration2</artifactId>
             <version>2.10.1</version>
         </dependency>
+
+        <!-- JUnit 5 API and Engine -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
